--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.5",
     "nodemon": "^3.0.1",
     "router": "^1.3.8"
