--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-tailwind/react": "^2.1.1",
+    "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -18,6 +20,7 @@
     "react-icons": "^4.12.0",
     "react-parallax-tilt": "^1.7.42",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "react-tsparticles": "^1.42.2",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
